--- a/_posts/2025-02-03-24hr trading.markdown
+++ b/_posts/2025-02-03-24hr trading.markdown
@@ -4,6 +4,7 @@ title: "24-Hour Trading: Are your Ops Teams Ready?"
 date: 2025-02-03
 categories: [financial services]
 tags: [financial servicing, investing, digital assets, custody]
+excerpt: "The NYSE is planning to extend their trading hours."
 ---
 
 
